--- a/app/src/main/res/layout/fragment_dhm_stock.xml
+++ b/app/src/main/res/layout/fragment_dhm_stock.xml
@@ -30,6 +30,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         android:layout_marginTop="@dimen/_15dp"
         android:orientation="horizontal"
         android:weightSum="3">
@@ -98,6 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
+        android:visibility="visible"
         android:orientation="horizontal"
         android:padding="@dimen/_15dp"
         android:weightSum="2">
