--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">hapi.fhir.org</domain>
         <domain includeSubdomains="true">devnndak.intellisoftkenya.com</domain>
+        <domain includeSubdomains="true">192.168.0.11</domain>
     </domain-config>
 </network-security-config>
