--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,6 +21,13 @@
             app:civ_border_color="@color/colorPrimary"
             app:civ_border_width="1dp" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_15dp"
+            android:text="@string/app_name"
+            android:textAlignment="center"
+            android:textSize="25sp"/>
     </LinearLayout>
 
     <ProgressBar
