--- a/app/src/main/res/layout/fragment_baby_dashboard.xml
+++ b/app/src/main/res/layout/fragment_baby_dashboard.xml
@@ -99,6 +99,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:visibility="invisible"
                             android:layout_gravity="center_horizontal"
                             android:gravity="center_horizontal"
                             android:orientation="horizontal">
@@ -147,7 +148,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
-
                             android:textSize="@dimen/_20sp" />
 
                         <TextView
@@ -235,6 +235,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:visibility="invisible"
                             android:layout_gravity="center_horizontal"
                             android:gravity="center_horizontal"
                             android:orientation="horizontal">
