--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="3">
+                android:weightSum="2">
 
                 <androidx.appcompat.widget.SearchView
                     android:id="@+id/search"
@@ -35,18 +35,29 @@
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_margin="10dp"
                     android:layout_weight="1"
+                    android:gravity="center|end"
                     android:orientation="horizontal">
 
-                    <Spinner
-                        android:id="@+id/mySpinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:entries="@array/sort"
-                        android:spinnerMode="dialog" />
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_start"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/action_start"
+                        app:cornerRadius="35dp" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_end"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_15dp"
+                        android:text="@string/action_to"
+                        app:cornerRadius="35dp" />
 
                 </LinearLayout>
+
             </LinearLayout>
 
             <include
@@ -144,17 +155,17 @@
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="0dp"
-                            android:layout_height="400dp"
+                            android:layout_height="300dp"
                             android:layout_weight="1.7">
 
                             <TextView
                                 android:id="@+id/textView"
-                                android:layout_width="0dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:rotation="-90"
-                                android:visibility="gone"
                                 android:text="@string/number_of_babies"
                                 android:textColor="@color/dim_red"
+                                android:visibility="gone"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
@@ -204,10 +215,32 @@
                         android:text="@string/app_expressing"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-                    <com.github.mikephil.charting.charts.LineChart
-                        android:id="@+id/expressing_chart"
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="300dp" />
+                        android:layout_height="0dp"
+                        android:layout_weight="1.7">
+
+                        <TextView
+                            android:id="@+id/textView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:rotation="-90"
+                            android:text="@string/number_of_mothers"
+                            android:visibility="gone"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintWidth_percent="0.01" />
+
+                        <com.github.mikephil.charting.charts.LineChart
+                            android:id="@+id/expressing_chart"
+                            android:layout_width="0dp"
+                            android:layout_height="300dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/textView1"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
