--- a/app/src/main/res/layout/statistics.xml
+++ b/app/src/main/res/layout/statistics.xml
@@ -88,6 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:gravity="end"
+                    android:visibility="invisible"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -112,6 +113,7 @@
                     android:layout_height="wrap_content"
                     android:indeterminate="false"
                     android:max="100"
+                    android:visibility="invisible"
                     android:padding="@dimen/_15dp"
                     android:progress="40" />
             </LinearLayout>
@@ -203,7 +205,7 @@
                         android:layout_width="@dimen/_15dp"
                         android:layout_height="@dimen/_15dp"
                         app:srcCompat="@drawable/ic_show_chart"
-                        app:tint="@color/design_default_color_error" />
+                        app:tint="@color/dim_green" />
 
                     <TextView
                         android:id="@+id/tv_pre_average"
@@ -211,7 +213,7 @@
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
-                        android:textColor="@color/design_default_color_error" />
+                        android:textColor="@color/dim_green" />
 
 
                 </LinearLayout>
@@ -322,14 +324,14 @@
                         android:layout_width="@dimen/_15dp"
                         android:layout_height="@dimen/_15dp"
                         app:srcCompat="@drawable/ic_show_chart"
-                        app:tint="@color/design_default_color_error" />
+                        app:tint="@color/dim_green" />
 
                     <TextView
                         android:id="@+id/tv_term_average"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
-                        android:textColor="@color/design_default_color_error" />
+                        android:textColor="@color/dim_green" />
 
 
                 </LinearLayout>
@@ -426,6 +428,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:gravity="end"
+                    android:visibility="invisible"
                     android:orientation="horizontal">
 
                     <ImageView
