24 Hour Milk Expression

--- a/app/src/main/res/layout/fragment_baby_lactation.xml
+++ b/app/src/main/res/layout/fragment_baby_lactation.xml
@@ -189,6 +189,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal"
                                     android:gravity="center_horizontal"
+                                    android:visibility="invisible"
                                     android:orientation="horizontal">
 
                                     <ImageView
