--- a/app/src/main/res/layout/fragment_edit_baby.xml
+++ b/app/src/main/res/layout/fragment_edit_baby.xml
@@ -8,6 +8,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/add_patient_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/_100dp" />
 
 </FrameLayout>
