--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -57,5 +57,9 @@
     <dimen name="_35sp">35sp</dimen>
     <dimen name="_0dp">0dp</dimen>
     <dimen name="padding_5">5dp</dimen>
+    <dimen name="component_item_height">180dp</dimen>
+    <dimen name="component_horizontal_margin">4dp</dimen>
+    <dimen name="component_vertical_margin">4dp</dimen>
+    <dimen name="icon_container_height">128dp</dimen>
 
 </resources>
